--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "grunt": "^1.2.1",
         "grunt-contrib-clean": "1.0.0",
         "grunt-contrib-concat": "1.0.0",
-        "grunt-contrib-uglify": "0.11.1",
-        "grunt-peg": "2.0.1"
+        "grunt-peg": "2.0.1",
+        "grunt-terser": "^2.0.0",
+        "terser": "^5.39.0"
     }
 }
